service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-dev
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: test-go-app-dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
