service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: test-go-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
