ingress-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-path-based-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: intership.itoutposts.ltd
      http:
        paths:
          - path: /main(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: app-service-main
                port:
                  number: 80
