ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - http:
        paths:
          - path: /dev/hello
            pathType: Prefix
            backend:
              service:
                name: app-service-dev
                port:
                  number: 8080
          - path: /main/hello
            pathType: Prefix
            backend:
              service:
                name: app-service-main
                port:
                  number: 8080
